--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,15 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&family=Spline+Sans+Mono:ital,wght@0,700;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&family=Spline+Sans+Mono:ital,wght@0,700;1,700&display=swap");
 
-
-
-
-
-.center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+body {
+  background: url("/assests/img/blur-bg.webp");
+  background-size: 100% 100%;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
