--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,10 @@
 @import "tailwindcss/utilities";
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&family=Spline+Sans+Mono:ital,wght@0,700;1,700&display=swap");
 
+:root {
+  --glow-color: #ff415130;
+}
+
 body {
   background: url("/assests/img/blur-bg.webp");
   background-size: 100% 100%;
@@ -12,4 +16,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.window-glow {
+  box-shadow:
+    0 0 5px var(--glow-color),
+    0 0 25px var(--glow-color),
+    0 0 50px var(--glow-color),
+    0 0 200px var(--glow-color);
 }
